--- a/resources/debug/readme
+++ b/resources/debug/readme
@@ -10,3 +10,5 @@
   - https://www.zenhub.com/blog/why-rubber-duck-debugging-is-the-best-way-to-debug-your-code/
   - https://www.growthmentor.com/blog/rubber-duck-debugging/
   - https://rubberduckdebugging.com/cyberduck/
+- lore:
+  - https://www.bugsnag.com/blog/celebrating-grace-hopper-and-the-origins-of-debugging
